Максимальный размер истории просмотров вынесен в константу